--- a/src/components/homeItem/homeItem.css
+++ b/src/components/homeItem/homeItem.css
@@ -1,5 +1,5 @@
 .home_item_container{
-    background-color: red;
+    background-color: #fff;
     margin:  0 0 1.2rem 0;
     padding: 1.2rem;
 }
@@ -9,21 +9,20 @@
 }
 .home_item_container .info_image_person{
     display: flex;
-    /*justify-content: space-between;*/
     margin-top: 0.6rem;
 }
 .home_item_container .info_person{}
 .home_item_container .info{
-    width: calc(100vw - 1rem - 5rem - 2.4rem);
-    height: 2.1rem;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     margin-right: 1rem;
+    width: calc(100vw - 1rem - 5rem - 2.4rem);
+    height: 2.1rem;
     color: #666;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 }
 .home_item_container .person{
     display: flex;
