--- a/src/pages/service_detail/service_detail.css
+++ b/src/pages/service_detail/service_detail.css
@@ -67,3 +67,28 @@
     height: 15rem;
     background-color: #fff;
 }
+.service_detail_container .service_radio{
+    background-color: #fff;
+    height: 2.4rem;
+    margin-bottom: 1.3rem;
+}
+.pay_button{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 3.2rem;
+    background-color: #fff;
+}
+.pay_button_word{
+    width: 60vw;
+    height: 2.4rem;
+    line-height: 2.4rem;
+    text-align: center;
+    border-radius: 1.2rem;
+    background-color: orange;
+    color: #fff;
+}
