--- a/src/pages/service_detail/service_detail.css
+++ b/src/pages/service_detail/service_detail.css
@@ -69,8 +69,9 @@
     background-color: #fff;
 }
 .service_detail_container .service_radio{
+    display: flex;
+    align-items: center;
     background-color: #fff;
-    height: 2.4rem;
     margin-bottom: 1.3rem;
 }
 .pay_button{
