--- a/src/pages/add_able/add_able.css
+++ b/src/pages/add_able/add_able.css
@@ -26,3 +26,27 @@
     width: calc(100vw - 4.4rem);
     border: 1px solid #ededee;
 }
+.add_able_img_list{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+}
+.add_able_img{
+    flex: 0 0 33.3%;
+    margin-bottom: .8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.add_able_img img{
+    width: 91%;
+}
+.add_img_border{
+    width: 91%;
+    border: 1px solid #ededed;
+}
+.add_able_button_row{
+    text-align: center;
+    margin-top: .5rem;
+    font-weight: bold;
+}
