create Chihiro react

--- a/src/components/bottom_button/bottom_button.scss
+++ b/src/components/bottom_button/bottom_button.scss
@@ -7,7 +7,7 @@
     align-items: center;
     width: 100vw;
     height: 3.2rem;
-    background-color: #ededed;
+    background-color: $--wrap-background-color;
 }
 .button_orange{
     width: 70vw;
