--- a/src/components/order_header/order_header.scss
+++ b/src/components/order_header/order_header.scss
@@ -74,5 +74,5 @@
 .order_header_leave{
     height: 1.2rem;
     width: 100vw;
-    background-color: #ededed;
+    background-color: $--wrap-background-color;
 }
