--- a/src/pages/order_list/order_list.scss
+++ b/src/pages/order_list/order_list.scss
@@ -1,4 +1,4 @@
 .order_list_container{
-  background-color: #ededed;
-  margin-top: 3.2rem;
+  background-color: $--wrap-background-color;
+  margin-top: $--wrap-height;
 }
