--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,7 +4,7 @@
     left: 0;
     display: flex;
     width: 100vw;
-    height: 3.2rem;
+    height: $--wrap-height;
     background-color: #fff;
 }
 .footer_item{
@@ -13,13 +13,13 @@
     justify-content: center;
     align-items: center;
     width: 33.33vw;
-    height: 3.2rem;
+    height: $--wrap-height;
 }
 .footer_container .image{
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1rem;
+    height: 1rem;
 }
 .footer_container .text{
-    margin-top: .4rem;
+    margin-top: .2rem;
     font-size: .8rem;
 }
