--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 3.2rem;
+    height: $--wrap-height;
     width: calc(100vw - 2.4rem);
     padding: 0 1.2rem;
     background-color: aqua;
