--- a/src/public/PubStyle.scss
+++ b/src/public/PubStyle.scss
@@ -1,2 +1,6 @@
 $--wrap-height: 2.8rem;
 $--wrap-background-color:#ededed;
+$--wrap-padding-border:1.2rem;
+$--wrap-image-width:5rem;
+$--wrap-image-height:5rem;
+
