create Chihiro react

--- a/src/components/homeItem/homeItem.scss
+++ b/src/components/homeItem/homeItem.scss
@@ -1,4 +1,5 @@
 .home_item_container{
+    height: 7.3rem;
     background-color: #fff;
     margin:  0 0 1.2rem 0;
     padding: $--wrap-padding-border
